--- a/index.html
+++ b/index.html
@@ -14,25 +14,30 @@
          <div class="num" value= 1 >1</div>
         <div class="num" value= 4 >4</div>
         <div class="num" value= 7 >7</div>
-        <div class="num" value="C">C</div>
+        <div class="num " value="C">C</div>
        </div>
        <div class="th">
          <div class="num" value= 2 >2</div>
         <div class="num" value= 5 >5</div>
         <div class="num" value= 8 >8</div>
-        <div class="num" value= 0 >0</div>
+        <div class="num " value= 0 >0</div>
+        <!-- <div class="num ce" value="E">CE</div> -->
         </div>
        <div class="th">
          <div class="num" value= 3 >3</div>
         <div class="num" value= 6 >6</div>
         <div class="num" value= 9 >9</div>
-        <div class="num" value="=">=</div>
+        <div class="num " value="=">=</div>
        </div>
        <div class="operators">
         <div class="num" value="+">+</div>
         <div class="num" value="-">-</div>
-        <div class="num" value="x">x</div>
-        <div class="num" value="/">/</div>
+        <div class="num" value="*">x</div>
+        <div class="num " value="/">/</div>
+       </div>
+       <div class="the">
+         <div class="num dot" value="."><strong>.</strong></div>
+              <div class="num de" value="E">CE</div>
        </div>
         </div>
     </div>
